# edgedb_rust_client_examples

./: Cargo.toml  edgedb.toml  readme.md
dbschema/: default.esdl
src/: lib.rs  main.rs
